--- a/main.css
+++ b/main.css
@@ -159,7 +159,7 @@ section h2{
     display: block;
     width: 100%;
     height: 100%;
-    background:white;
+    background:#fff;
     left: 0;
     top: 0;
     opacity: 0;
@@ -233,30 +233,27 @@ footer p{
 .banner-area, .about-area, .gallery-area, .contact-area{
     border-top: 50px solid #383C42;
 }
-/*Media queries
-@media (min-width: 640px){
- 
-...
- 
+/*Media queries*/
+@media (min-width: 320px) and (max-width: 450px){
+    .banner-text h3 {
+        font-size: 3em;
+        margin-left: -5px;
+        margin-top: 235px;
+    }
+    nav{
+        flex-direction: column;
+        text-align: center;
+    }
+    nav li{
+        margin: 10px 0;
+    }
+    header{
+        height: 235px;
+    }
+    .gallery-area img{
+        width:85%;
+    }
 }
- 
-@media (min-width: 768px){
- 
-...
- 
-}
- 
-@media (min-width: 1024px){
- 
-...
- 
-}
- 
-@media (min-width: 1200px){
- 
-...
- 
-}*/
 @media (max-width: 800px){
     section{
         padding: 35px 25px;
@@ -304,24 +301,5 @@ footer p{
         padding:10px 40px;
     }
 }
-@media (min-width: 320px) and (max-width: 450px){
-    .banner-text h3 {
-        font-size: 3em;
-        margin-left: -5px;
-        margin-top: 235px;
-    }
-    nav{
-        flex-direction: column;
-        text-align: center;
-    }
-    nav li{
-        margin: 10px 0;
-    }
-    header{
-        height: 235px;
-    }
-    .gallery-area img{
-        width:85%;
-    }
-}
+
 
