--- a/main.css
+++ b/main.css
@@ -30,6 +30,10 @@ a.btn:hover{
     font-weight: bold;
     font-size: 22px;
 }
+.btn:focus, input[type="button"]:focus{
+    box-shadow: none;
+    outline: none;
+}
 i{
     font-size: 40px;
     color: maroon;
